# data-science-portfolio

./: .gitattributes  .gitignore  README.md
Home_Credit_Default/: .gitignore  README.md  objective.md  pyproject.toml
Home_Credit_Default/deploy/: Dockerfile  main.py  p_final_merged.parquet  preprocess.py  requirements.txt  test_input.json
Home_Credit_Default/notebooks_and_initial_tables/: .gitignore
Home_Credit_Default/notebooks_and_initial_tables/functions/: csv_to_parquet.py  functions.py
Home_Credit_Default/notebooks_and_initial_tables/notebooks/: 2-app_model.ipynb  4-table_model.ipynb  5-test_data.ipynb
Home_Credit_Default/streamlit/: .dockerignore  Dockerfile  app_memory_optimized.py  bureau_final.parquet  bureau_final_optimized.parquet  p_final_merged_optimized.parquet  preprocess_memory_efficient.py  requirements.txt
Mental_Health_Survey/: README.md  project.ipynb
Spaceship_Titanic/: README.md  eda_stat.ipynb  feat_eng_model.ipynb  func_3.py  preprocessing.py  pyproject.toml  requirements.txt
Stroke_Prediction/: .gitignore  README.md  pyproject.toml  requirements.txt
Stroke_Prediction/deployment/: Dockerfile  bmi_imputation_pipeline.joblib  deploy.py  locustfile.py  preprocessing_pipeline.joblib  test_request.py
Stroke_Prediction/project_data/: func_2.py  stroke_project.ipynb  stroke_project.py
