[project]
name = "ml-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black[jupyter]>=25.1.0",
    "featuretools>=1.31.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "missingno>=0.5.2",
    "nbqa>=1.9.1",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "phik>=0.12.4",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
    "shap>=0.47.1",
    "statsmodels>=0.14.4",
    "tabulate>=0.9.0",
    "xgboost>=3.0.0",
]
